default java opts for java21
Signed-off-by: Stanislas Nanchen <stan@codesmith.ch>